--- a/vpc_setup.yml
+++ b/vpc_setup.yml
@@ -1,5 +1,8 @@
+#    - debug:
+#        var: vpcout
+
     - name: create Public Subnet 1 in Zone1
-      ec2_vpc_subnet:
+      amazon.aws.ec2_vpc_subnet:
         vpc_id: "{{vpcout.vpc.id}}"
         region: "{{region}}"
         az: "{{zone1}}"
@@ -11,7 +14,7 @@
       register: pubsub1_out
 
     - name: create Public Subnet 2 in Zone2
-      ec2_vpc_subnet:
+      amazon.aws.ec2_vpc_subnet:
         vpc_id: "{{vpcout.vpc.id}}"
         region: "{{region}}"
         az: "{{zone2}}"
@@ -35,7 +38,7 @@
       register: pubsub3_out
 
     - name: create Private Subnet 1 in Zone1
-      ec2_vpc_subnet:
+      amazon.aws.ec2_vpc_subnet:
         vpc_id: "{{vpcout.vpc.id}}"
         region: "{{region}}"
         az: "{{zone1}}"
@@ -47,7 +50,7 @@
       register: privsub1_out
 
     - name: create Private Subnet 2 in Zone2
-      ec2_vpc_subnet:
+      amazon.aws.ec2_vpc_subnet:
         vpc_id: "{{vpcout.vpc.id}}"
         region: "{{region}}"
         az: "{{zone2}}"
@@ -59,7 +62,7 @@
       register: privsub2_out
 
     - name: create Private Subnet 3 in Zone3
-      ec2_vpc_subnet:
+      amazon.aws.ec2_vpc_subnet:
         vpc_id: "{{vpcout.vpc.id}}"
         region: "{{region}}"
         az: "{{zone3}}"
