--- a/vpc_setup.yml
+++ b/vpc_setup.yml
@@ -2,7 +2,7 @@
 #        var: vpcout
 
     - name: create Public Subnet 1 in Zone1
-      amazon.aws.ec2_vpc_subnet:
+      ec2_vpc_subnet:
         vpc_id: "{{vpcout.vpc.id}}"
         region: "{{region}}"
         az: "{{zone1}}"
@@ -14,7 +14,7 @@
       register: pubsub1_out
 
     - name: create Public Subnet 2 in Zone2
-      amazon.aws.ec2_vpc_subnet:
+      ec2_vpc_subnet:
         vpc_id: "{{vpcout.vpc.id}}"
         region: "{{region}}"
         az: "{{zone2}}"
@@ -38,7 +38,7 @@
       register: pubsub3_out
 
     - name: create Private Subnet 1 in Zone1
-      amazon.aws.ec2_vpc_subnet:
+      ec2_vpc_subnet:
         vpc_id: "{{vpcout.vpc.id}}"
         region: "{{region}}"
         az: "{{zone1}}"
@@ -50,7 +50,7 @@
       register: privsub1_out
 
     - name: create Private Subnet 2 in Zone2
-      amazon.aws.ec2_vpc_subnet:
+      ec2_vpc_subnet:
         vpc_id: "{{vpcout.vpc.id}}"
         region: "{{region}}"
         az: "{{zone2}}"
@@ -62,7 +62,7 @@
       register: privsub2_out
 
     - name: create Private Subnet 3 in Zone3
-      amazon.aws.ec2_vpc_subnet:
+      ec2_vpc_subnet:
         vpc_id: "{{vpcout.vpc.id}}"
         region: "{{region}}"
         az: "{{zone3}}"
