--- a/vpc_setup.yml
+++ b/vpc_setup.yml
@@ -1,6 +1,9 @@
 #    - debug:
 #        var: vpcout
 
+-hosts: localhost
+connection: local
+tasks:
     - name: create Public Subnet 1 in Zone1
       ec2_vpc_subnet:
         vpc_id: "{{vpcout.vpc.id}}"
