--- a/vpc_setup.yml
+++ b/vpc_setup.yml
@@ -1,7 +1,7 @@
 #    - debug:
 #        var: vpcout
 
-    - name: create Public Subnet 1 in Zone1
+    - name: Create Public Subnet 1 in Zone1
       ec2_vpc_subnet:
         vpc_id: "{{vpcout.vpc.id}}"
         region: "{{region}}"
@@ -13,7 +13,7 @@
             Name: vprofile-pubsub1
       register: pubsub1_out
 
-    - name: create Public Subnet 2 in Zone2
+    - name: Create Public Subnet 2 in Zone2
       ec2_vpc_subnet:
         vpc_id: "{{vpcout.vpc.id}}"
         region: "{{region}}"
@@ -25,7 +25,7 @@
           Name: vprofile-pubsub2
       register: pubsub2_out
 
-    - name: create Public Subnet 3 in Zone3
+    - name: Create Public Subnet 3 in Zone3
       ec2_vpc_subnet:
         vpc_id: "{{vpcout.vpc.id}}"
         region: "{{region}}"
@@ -37,7 +37,7 @@
           Name: vprofile-pubsub3
       register: pubsub3_out
 
-    - name: create Private Subnet 1 in Zone1
+    - name: Create Private Subnet 1 in Zone1
       ec2_vpc_subnet:
         vpc_id: "{{vpcout.vpc.id}}"
         region: "{{region}}"
@@ -49,7 +49,7 @@
             Name: vprofile-privsub1
       register: privsub1_out
 
-    - name: create Private Subnet 2 in Zone2
+    - name: Create Private Subnet 2 in Zone2
       ec2_vpc_subnet:
         vpc_id: "{{vpcout.vpc.id}}"
         region: "{{region}}"
@@ -61,7 +61,7 @@
           Name: vprofile-privsub2
       register: privsub2_out
 
-    - name: create Private Subnet 3 in Zone3
+    - name: Create Private Subnet 3 in Zone3
       ec2_vpc_subnet:
         vpc_id: "{{vpcout.vpc.id}}"
         region: "{{region}}"
