--- a/vpc_setup.yml
+++ b/vpc_setup.yml
@@ -1,7 +1,25 @@
-#    - debug:
+- hosts: localhost
+  connection: local
+  gather_facts: False
+  tasks:
+    - name: Import VPC Variables
+      include_vars: vars/vpc_setup
+
+    - name: Create Vprofile VPC
+      ec2_vpc_net:
+        name: "{{vpc_name}}"
+        cidr_block: "{{vpcCidr}}"
+        region: "{{region}}"
+        dns_support: yes
+        dns_hostnames: yes
+        tenancy: default
+        state: "{{state}}"
+      register: vpcout
+
+     #    - debug:
 #        var: vpcout
 
-    - name: Create Public Subnet 1 in Zone1
+    - name: create Public Subnet 1 in Zone1
       ec2_vpc_subnet:
         vpc_id: "{{vpcout.vpc.id}}"
         region: "{{region}}"
@@ -13,7 +31,7 @@
             Name: vprofile-pubsub1
       register: pubsub1_out
 
-    - name: Create Public Subnet 2 in Zone2
+    - name: create Public Subnet 2 in Zone2
       ec2_vpc_subnet:
         vpc_id: "{{vpcout.vpc.id}}"
         region: "{{region}}"
@@ -25,7 +43,7 @@
           Name: vprofile-pubsub2
       register: pubsub2_out
 
-    - name: Create Public Subnet 3 in Zone3
+    - name: create Public Subnet 3 in Zone3
       ec2_vpc_subnet:
         vpc_id: "{{vpcout.vpc.id}}"
         region: "{{region}}"
@@ -37,7 +55,7 @@
           Name: vprofile-pubsub3
       register: pubsub3_out
 
-    - name: Create Private Subnet 1 in Zone1
+    - name: create Private Subnet 1 in Zone1
       ec2_vpc_subnet:
         vpc_id: "{{vpcout.vpc.id}}"
         region: "{{region}}"
@@ -49,7 +67,7 @@
             Name: vprofile-privsub1
       register: privsub1_out
 
-    - name: Create Private Subnet 2 in Zone2
+    - name: create Private Subnet 2 in Zone2
       ec2_vpc_subnet:
         vpc_id: "{{vpcout.vpc.id}}"
         region: "{{region}}"
@@ -61,7 +79,7 @@
           Name: vprofile-privsub2
       register: privsub2_out
 
-    - name: Create Private Subnet 3 in Zone3
+    - name: create Private Subnet 3 in Zone3
       ec2_vpc_subnet:
         vpc_id: "{{vpcout.vpc.id}}"
         region: "{{region}}"
@@ -71,4 +89,4 @@
         map_public: yes
         tags:
           Name: vprofile-privsub3
-      register: privsub3_out
+      register: privsub3_out 
